module8/httpserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpserver
  name: httpserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - image: ducknight/httpserver:1.1.0
          name: httpserver
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 8001
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8001
              scheme: HTTP
            periodSeconds: 5
            timeoutSeconds: 1
            initialDelaySeconds: 5
          startupProbe:
            httpGet:
              path: /healthz
              port: 8001
            failureThreshold: 30
            periodSeconds: 10
          resources:
            limits:
              cpu: 200m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 10Mi
          volumeMounts:
            - name: httpserver-config
              mountPath: "/etc/httpserver"
              readOnly: true
      volumes:
        - name: httpserver-config
          configMap:
            name: httpserver-config
